--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
 </head>
 <body>
     <!-- NAVBAR -->
-
+    <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="#">Features</a>
+            <a class="nav-item nav-link" href="#">Pricing</a>
+        </div>
+    </nav>
     <!-- HERO -->
-
+<div class="jumbotron">
+    <h1>Launch Page</h1>
+    <p class="lead">A Fantastic Product!</p>
+    <a href="#" class="btn btn-primary">Learn More</a>
+</div>
     <h1>Launch Page</h1>
 
     <!-- BENEFITS -->
