--- a/index.html
+++ b/index.html
@@ -4,28 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <title>Launch Page</title> 
 </head>
 <body>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+    <nav class="navbar navbar-expand navbar-light bg-light">
+        <a class="navbar-brand" href="#">Launch Page</a>
         <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">Features</a>
-            <a class="nav-item nav-link" href="#">Pricing</a>
+          <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="#">Features</a>
+          <a class="nav-item nav-link" href="#">Pricing</a>
         </div>
     </nav>
     <!-- HERO -->
-<div class="jumbotron">
-    <h1>Launch Page</h1>
+<div class="mt-4 p-5 container-fluid bg-light text-center">
+    <h1 class="display-4"> Launch Page</h1>   
     <p class="lead">A Fantastic Product!</p>
     <a href="#" class="btn btn-primary">Learn More</a>
-</div>
-    <h1>Launch Page</h1>
-
+  </div>
     <!-- BENEFITS -->
-
+    <div class="container mb-5 mt-5 pb-5 pt-5">
+        <div class="row">
+          <div class="col-lg-4">
+            <h3>Safe</h3>
+            <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae, impedit.</p>
+          </div>
+          <div class="col-lg-4">
+            <h3>Healthy</h3>
+            <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta cum dolorem earum et saepe repellat maiores magni ipsa eos itaque voluptate sequi nemo aliquam labore, quod ratione cupiditate quam eligendi!</p>
+          </div>
+          <div class="col-lg-4">
+            <h3>Fun</h3>
+            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          </div>
+        </div>
+      </div>
 
     <!-- CALL TO ACTION -->
 
