--- a/index.html
+++ b/index.html
@@ -43,8 +43,18 @@
       </div>
 
     <!-- CALL TO ACTION -->
-
-
+    <div class="mt-4 p-5 container-fluid bg-light text-center">
+        <p class="lead mb-4">Sign up for more info</p>
+        <div class="d-flex justify-content-center">
+            <form action="#" class="form-inline">
+                <input type="text" class="form-control mb-2 mr-sm-2" placeholder="email"/>
+                <button type="submit" class="btn btn-primary mb-2">submit</button>
+            </form>
+        </div>
+    </div>
     <!-- FOOTER -->
+    <div class="bg-secondary p-5 text-white">
+        &copy; 2019 Launch Page Inc
+    </div>
 </body>
 </html>
