--- a/index.html
+++ b/index.html
@@ -1,40 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Launch Page</title> 
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <!-- Bootstrap theme -->
-    <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Launch Page</title> 
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <!-- Bootstrap theme -->
+  <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
+  <!-- Custom Styles -->
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- NAVBAR -->
-    <nav class="navbar navbar-expand navbar-light bg-light">
-        <a class="navbar-brand" href="#">Launch Page</a>
-        <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="#">Features</a>
-          <a class="nav-item nav-link" href="#">Pricing</a>
-        </div>
-    </nav>
-    <!-- HERO -->
-<div class="mt-4 p-5 container-fluid bg-light text-center">
-    <h1 class="display-4"> Launch Page</h1>   
+  <!-- NAVBAR -->
+  <nav class="navbar navbar-expand navbar-light" href="styles.css">
+    <a class="navbar-brand" href="#">Launch Page</a>
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="#">Features</a>
+        <a class="nav-item nav-link" href="#">Pricing</a>
+      </div>
+  </nav>
+  <!-- HERO -->
+    <div class="mt-4 p-5 container-fluid bg-image text-center" style="background-image: url('https://images.pexels.com/photos/2834917/pexels-photo-2834917.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2'); height: 400px;">
+    <h1 class="display-4"> Launch Page</h1>  
     <p class="lead">A Fantastic Product!</p>
-    <a href="#" class="btn btn-primary">Learn More</a>
+    <a class="btn btn-primary">Learn More</a>
+    </div>
   </div>
     <!-- BENEFITS -->
     <div class="container mb-5 mt-5 pb-5 pt-5">
-        <div class="row">
-          <div class="col-lg-4">
+        <div class="row m-5">
+          <div class="col-lg-6 offset-lg-3">
+            <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/yF5cdKPqyOw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="col-lg-4">
             <h3>Safe</h3>
             <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae, impedit.</p>
-          </div>
-          <div class="col-lg-4">
+            </div>
+            <div class="col-lg-4">
             <h3>Healthy</h3>
             <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta cum dolorem earum et saepe repellat maiores magni ipsa eos itaque voluptate sequi nemo aliquam labore, quod ratione cupiditate quam eligendi!</p>
           </div>
@@ -44,6 +51,8 @@
           </div>
         </div>
       </div>
+    </div>
+    
 
     <!-- CALL TO ACTION -->
     <div class="mt-4 p-5 container-fluid bg-light text-center">
