--- a/index.html
+++ b/index.html
@@ -24,28 +24,28 @@
       </div>
   </nav>
   <!-- HERO -->
-    <div class="mt-4 p-5 container-fluid bg-image text-center" style="background-image: url('https://images.pexels.com/photos/2834917/pexels-photo-2834917.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2'); height: 400px;">
+    <div class="mt-4 p-5 container-fluid bg-image text-center" style="background-image: url('https://images.pexels.com/photos/1905009/pexels-photo-1905009.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2'); height: 400px;" href="styles.css">
     <h1 class="display-4"> Launch Page</h1>  
     <p class="lead">A Fantastic Product!</p>
     <a class="btn btn-primary">Learn More</a>
     </div>
   </div>
     <!-- BENEFITS -->
-    <div class="container mb-5 mt-5 pb-5 pt-5">
+    <div class="container mb-5 mt-5 pb-10 pt-5">
         <div class="row m-5">
-          <div class="col-lg-6 offset-lg-3">
+          <div class="col-lg-6 offset-lg-3 pb-5">
             <div class="embed-responsive embed-responsive-16by9">
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/yF5cdKPqyOw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-20 pt-5">
             <h3>Safe</h3>
             <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae, impedit.</p>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-20">
             <h3>Healthy</h3>
             <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta cum dolorem earum et saepe repellat maiores magni ipsa eos itaque voluptate sequi nemo aliquam labore, quod ratione cupiditate quam eligendi!</p>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-20">
             <h3>Fun</h3>
             <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
           </div>
@@ -55,7 +55,7 @@
     
 
     <!-- CALL TO ACTION -->
-    <div class="mt-4 p-5 container-fluid bg-light text-center">
+    <div class="mt-4 p-5 container-fluid bg-light text-center" style="background-image: url('https://images.pexels.com/photos/1905009/pexels-photo-1905009.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2'); height: 400px;">
         <p class="lead mb-4">Sign up for more info</p>
         <div class="d-flex justify-content-center">
             <form action="#" class="form-inline">
@@ -66,7 +66,7 @@
     </div>
     <!-- FOOTER -->
     <div class="bg-secondary p-5 text-white">
-        &copy; 2019 Launch Page Inc
+      &copy; 2019 Launch Page Inc
     </div>
 </body>
 </html>
