--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Launch Page</title> 
+  <title> Jay's offical site</title> 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -24,9 +24,9 @@
       </div>
   </nav>
   <!-- HERO -->
-    <div class="mt-4 p-5 container-fluid bg-image text-center" style="background-image: url('https://images.pexels.com/photos/1905009/pexels-photo-1905009.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2'); height: 400px;" href="styles.css">
-    <h1 class="display-4"> Launch Page</h1>  
-    <p class="lead">A Fantastic Product!</p>
+    <div class="mt-4 p-5 container-fluid bg-image text-center" style="background-image: url('https://images.pexels.com/photos/1045534/pexels-photo-1045534.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2'); height: 400px;" href="styles.css">
+    <h1 class="display-4"> instagram @jaaytoo0fficial</h1>  
+    <p class="lead">All things basketball</p>
     <a class="btn btn-primary">Learn More</a>
     </div>
   </div>
@@ -35,19 +35,19 @@
         <div class="row m-5">
           <div class="col-lg-6 offset-lg-3 pb-5">
             <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/yF5cdKPqyOw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/sozwPJF5Wro" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="col-lg-20 pt-5">
-            <h3>Safe</h3>
-            <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae, impedit.</p>
+            <h3>Basketball in the 80's</h3>
+            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quo enim, eum ullam fuga explicabo. Ratione, suscipit blanditiis! Repellendus quidem, rerum quis odio fuga amet tempora sed. Error sequi aliquid consequuntur, praesentium est minima unde aspernatur excepturi dignissimos, nihil id?</p>
             </div>
             <div class="col-lg-20">
-            <h3>Healthy</h3>
+            <h3>basketball in the 90's</h3>
             <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta cum dolorem earum et saepe repellat maiores magni ipsa eos itaque voluptate sequi nemo aliquam labore, quod ratione cupiditate quam eligendi!</p>
           </div>
           <div class="col-lg-20">
-            <h3>Fun</h3>
-            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <h3>Basketball now</h3>
+            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut cum ab earum repellat laudantium natus ipsa dolore ipsam id soluta, placeat impedit provident labore facilis cupiditate quas odit facere harum!</p>
           </div>
         </div>
       </div>
@@ -55,7 +55,7 @@
     
 
     <!-- CALL TO ACTION -->
-    <div class="mt-4 p-5 container-fluid bg-light text-center" style="background-image: url('https://images.pexels.com/photos/1905009/pexels-photo-1905009.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2'); height: 400px;">
+    <div class="mt-4 p-5 container-fluid bg-light text-center" style="background-image: url('https://images.pexels.com/photos/71103/basketball-sports-teams-players-71103.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2'); height: 400px;">
         <p class="lead mb-4">Sign up for more info</p>
         <div class="d-flex justify-content-center">
             <form action="#" class="form-inline">
