--- a/clonepage.html
+++ b/clonepage.html
@@ -17,9 +17,9 @@
 <body>
 <!-- NAVBAR -->
 <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg bg-transparent">
-        <div class="container-fluid">
-        <a class="navbar-brand" role="button" href="#"><i class="fa-brands fa-flickr"></i>Flickr</a> 
+    <nav class="navbar navbar-expand-lg navbar-default bg-transparent">
+        <div class="container-fluid" id="title">
+        <a class="navbar-brand" role="button" href="index"><i class="fa-brands fa-flickr"></i>Flickr</a> 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
